# rust-learning

./: .gitignore  README.md  arr.rs  borrow.rs  closure.rs  genimpl.rs  map.rs  match.rs  methods.rs  mut.rs  result.rs  resultopt.rs  shit.rs  traits.rs  visible.rs
close/: Cargo.toml
close/src/: lib.rs  main.rs
grrs/: Cargo.toml
grrs/src/: lib.rs  main.rs
grrs/tests/: cli.rs
prog/: Cargo.toml
prog/src/: main.rs
serv/: Cargo.toml
serv/src/: main.rs
servfile/: Cargo.toml
servfile/src/: main.rs
