[package]
name = "serv"
version = "0.1.0"
authors = ["Tanner Babcock <babkock@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.9", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
futures-util = "0.3.15"
